--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,15 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
-loader_version=0.14.8
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.22
+loader_version=0.14.9
 # Mod Properties
-mod_version=1.0.0+1.19
+mod_version=1.1.0+1.19.2
 maven_group=me.medisant
 archives_base_name=anticlickevent
 # Dependencies
+cloth_config_version=6.2.57
+mod_menu_version=4.0.6
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.58.0+1.19
+fabric_version=0.63.0+1.19.2
